idea/testData/checker/regression/DescructuringDeclarationInForLoop.fir.kt
fun main() {
    for ((i, j)<error descr="Expecting 'in'">)</error> {}
}
